--- a/src/Components/Footer.astro
+++ b/src/Components/Footer.astro
@@ -1,10 +1,7 @@
 ---
 import logoA from "../assets/logoA.png";
 import { Image } from 'astro:assets';
-import { PiFacebookLogoBold } from 'react-icons/pi'
-import { PiTwitterLogo } from 'react-icons/pi'
-import { PiInstagramLogoBold } from 'react-icons/pi'
-import { PiYoutubeLogoBold } from 'react-icons/pi'
+
 ---
 <footer class="bg-main mt-44 max-md:mt-24">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
@@ -81,11 +78,8 @@ import { PiYoutubeLogoBold } from 'react-icons/pi'
     <div class="sm:flex sm:items-center sm:justify-around dark:bg-gray-900 h-16 ">
           <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Copyright © 2023 . All Rights Reserved.
           </span>
-          <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
-            <PiTwitterLogo style={{color:"white"}} size={25}/>
-            <PiFacebookLogoBold style={{color:"white"}} size={25}/>
-            <PiInstagramLogoBold style={{color:"white"}} size={25}/>
-            <PiYoutubeLogoBold style={{color:"white"}} size={25}/>
+          <div class="flex mt-4 text-base text-gray-500 space-x-5 sm:justify-center sm:mt-0">
+            <p>Hooman Digital LLP</p>
           </div>
       </div>
 </footer>
