--- a/src/Components/Post.astro
+++ b/src/Components/Post.astro
@@ -2,7 +2,7 @@
 import type{CollectionEntry} from 'astro:content'
 import { Image } from 'astro:assets';
 import detailimg from "../assets/detailimg.png";
-import { FiArrowUpRight } from 'react-icons/fi';
+
 
 type Props={
     post:CollectionEntry<'posts'>;
@@ -16,7 +16,7 @@ const { post}=Astro.props;
             <h1 class="text-2xl font-semibold mt-8 text-primary ">{post.data.title}</h1>
             <p class="text-gray-400 mt-2 text-base">{post.data.des}</p>
             <div class="border-2 border-gray-500 h-10 w-40 rounded-full mt-6 hover:border-primary hover:bg-primary transition ease-out duration-500">
-            <a  href={`/blog/${post.slug}`}><button  class="px-4 py-1 gap-2 flex text-base "><p >Read More</p> <FiArrowUpRight size={28} style={{padding:"5px"}}/></button></a>
+            <a  href={`/blog/${post.slug}`}><button  class="px-4 py-1 gap-2 flex text-base "><p >Read More</p> </button></a>
         </div>   
     </div>
 </div>
